==> etn-electrical/JIVE_Client_Code/Babelfish/Code/uC/STM32H7xx/uC_Flash.cpp <==
#include "Includes.h"
#include "uC_Flash.h"
#include "StdLib_MV.h"
#include "uC_Interrupt.h"
#include "string.h"
#include "NV_Ctrl_Debug.h"
#include "Babelfish_Assert.h"

NV_Ctrl::nv_status_t uC_Flash::Erase( uint32_t address, uint32_t length,
									  cback_func_t cback, cback_param_t param )
{
	if ( m_semaphore == NV_Ctrl::RELEASE )
	{
		if ( Check_Range( address, length ) && ( length != 0U ) )
		{
			NV_CTRL_PRINT( DBG_MSG_INFO, "E: %x	%d", address, length );
			m_semaphore = NV_Ctrl::ACQUIRE;
			m_asynch_data.data = nullptr;
			m_asynch_data.address = address;
			m_asynch_data.length = length;
			m_asynch_data.cback = cback;
			m_asynch_data.param = param;

			m_asynch_erase_sector_head = Get_Sector( address );
			m_asynch_erase_sector_end = Get_Sector( address + length - 1U );

			m_wait_time = Erase_Time( address, length );
			m_state = ERASE;
			m_status = NV_Ctrl::PENDING_CALL_BACK;
		}
		else
		{
			m_status = NV_Ctrl::INVALID_ADDRESS;
		}
	}
	else
	{
		m_status = NV_Ctrl::BUSY_ERROR;
	}

	return ( m_status );
}

bool uC_Flash::Write_Now( uint8_t* data, uint32_t dest_address, NV_CTRL_LENGTH_TD length )
{
	bool return_val = false;

	if ( ( dest_address >= BANK1_START_ADDR ) && ( dest_address <= BANK1_END_ADDR ) )
	{
		return_val = Write_Now_Bank1( data, dest_address, length );
	}
	else if ( ( dest_address >= BANK2_START_ADDR ) && ( dest_address <= BANK2_END_ADDR ) )
	{
		return_val = Write_Now_Bank2( data, dest_address, length );
	}
	else
	{
		// misra
	}
	return ( return_val );
}

NV_Ctrl::nv_status_t uC_Flash::Erase( uint32_t address, NV_CTRL_LENGTH_TD length,
									  uint8_t erase_data, bool protected_data )
{
	bool erase_status = false;
	uint32_t sector_size = 0U;
	uint32_t sector_num = 0U;
	uint32_t base_address = 0U;

	m_erase_val = erase_data;
	NV_Ctrl::nv_status_t m_status = NV_Ctrl::BUSY_ERROR;

	if ( m_semaphore == NV_Ctrl::RELEASE )
	{
		if ( Check_Range( address, length ) )
		{
			NV_CTRL_PRINT( DBG_MSG_INFO, "e: %x	%d", address, length );
			m_semaphore = NV_Ctrl::ACQUIRE;
			m_status = NV_Ctrl::SUCCESS;
			sector_num = Get_Sector( address );
			while ( ( m_status == NV_Ctrl::SUCCESS ) && ( length != 0 ) )
			{
				uC_Watchdog::Force_Feed_Dog();
				base_address = Get_Sector_Base_Address( sector_num );
				sector_size = Get_Page_Size( base_address );
				/* Even if the length value is less than the sector size it will erase the entire sector */
				erase_status = Erase_Page( base_address );
				if ( erase_status != true )
				{
					m_status = NV_Ctrl::BUSY_ERROR;
				}
				else
				{
					sector_num++;
					/* Decrement the length as per the erased sector size. */
					if ( length >= sector_size )
					{
						length -= sector_size;
					}
					else
					{
						length = 0U;
					}
				}
			}	// end of while loop()

			m_semaphore = NV_Ctrl::RELEASE;
		}
		else
		{
			m_status = NV_Ctrl::INVALID_ADDRESS;
		}
	}
	else
	{
		m_status = NV_Ctrl::BUSY_ERROR;
	}

	return ( m_status );
}

bool uC_Flash::Erase_Page( uint32_t address )
{
	uC_FLASH_STATUS_EN status;
	uint32_t sector_num;

	status = Wait_For_Complete();

	if ( status == uC_FLASH_COMPLETE )
	{
#ifndef DO_NOT_CHANGE_MEM
		if ( ( address >= BANK1_START_ADDR ) && ( address <= BANK1_END_ADDR ) )
		{
			sector_num = Get_Sector( address );
			sector_num %= 8U;	/// > Bank 1 sector_start = 0 and sector_end = 7
			Unlock_Flash();

			/* if the previous operation is completed, proceed to erase the sector */
			m_flash_ctrl->CR1 &= ( ~FLASH_CR_PSIZE );
			m_flash_ctrl->CR1 |= FLASH_CR_PSIZE_1;	// Set it to 32bit so we can erase quicker.
			m_flash_ctrl->CR1 &= ( ~FLASH_CR_SNB );
			m_flash_ctrl->CR1 |= ( FLASH_CR_SER | ( sector_num * FLASH_CR_SNB_1 ) );

			/*
			    As per datasheet the erase can take 3 seconds so increasing the watchdog time to 4 Sec.
			 */
			uC_Watchdog::Init( WATCHDOG_TIMEOUT_ERASE_SECTOR );

			/*
			    Added 2 DSB instructions here as per note from STM32H743 manual. Note: When setting the STRT bit in the
			       FLASH_CR register and before polling the BSY bit to be cleared, the software can issue a DSB
			       instruction to guarantee the completion of a previous access to FLASH_CR register.
			 */
			__ISB();
			__DSB();
			m_flash_ctrl->CR1 |= FLASH_CR_START;
			__ISB();
			__DSB();

			status = Wait_For_Complete();

			/* if the erase operation is completed, disable the SER Bit */
			m_flash_ctrl->CR1 &= ( ~FLASH_CR_SER );
			m_flash_ctrl->CR1 &= ( ~FLASH_CR_SNB );
			Lock_Flash();

			uC_Watchdog::Init( WATCHDOG_TIMEOUT );
		}
		else if ( ( address >= BANK2_START_ADDR ) && ( address <= BANK2_END_ADDR ) )
		{
			sector_num = Get_Sector( address );
			sector_num %= 8U;	/// > Bank 2 sector_start = 0 and sector_end = 7
			Unlock_Flash();

			/* if the previous operation is completed, proceed to erase the sector */
			m_flash_ctrl->CR2 &= ( ~FLASH_CR_PSIZE );
			m_flash_ctrl->CR2 |= FLASH_CR_PSIZE_1;	// Set it to 32bit so we can erase quicker.
			m_flash_ctrl->CR2 &= ( ~FLASH_CR_SNB );
			m_flash_ctrl->CR2 |= ( FLASH_CR_SER | ( sector_num * FLASH_CR_SNB_1 ) );

			/*
			    As per datasheet the erase can take 3 seconds so increasing the watchdog time to 4 Sec.
			 */
			uC_Watchdog::Init( WATCHDOG_TIMEOUT_ERASE_SECTOR );

			/*
			    Added 2 DSB instructions here as per note from STM32H743 manual. Note: When setting the STRT bit in the
			       FLASH_CR register and before polling the BSY bit to be cleared, the software can issue a DSB
			       instruction to guarantee the completion of a previous access to FLASH_CR register.
			 */
			__ISB();
			__DSB();
			m_flash_ctrl->CR2 |= FLASH_CR_START;
			__ISB();
			__DSB();

			status = Wait_For_Complete();

			/* if the erase operation is completed, disable the SER Bit */
			m_flash_ctrl->CR2 &= ( ~FLASH_CR_SER );
			m_flash_ctrl->CR2 &= ( ~FLASH_CR_SNB );
			SCB_CleanInvalidateDCache_by_Addr( ( uint32_t* )Get_Sector_Base_Address( sector_num ),
											   INTERNAL_FLASH_PAGE_SIZES[sector_num].sector_size );
			SCB_InvalidateICache();
			Lock_Flash();

			uC_Watchdog::Init( WATCHDOG_TIMEOUT );
		}
		else
		{
			// Misra
		}
#endif
	}

	return ( status == uC_FLASH_COMPLETE );
}

bool uC_Flash::Read_Now( uint8_t* data, uint32_t address, NV_CTRL_LENGTH_TD length ) const
{
	BF_Lib::Copy_String( data, ( uint8_t* )address, length );

	return ( true );
}

void uC_Flash::Unlock_Flash( void )
{
	/**
	 * @remark Coding Standard Deviation:
	 * @n MISRA-C++[2008] Rule: 2-13-3
	 * @n PCLint: Note 1960: Violates MISRA C++ 2008 Required Rule 2-13-3, Unsigned octal and hexadecimal literals
	 * require a 'U' suffix
	 * @n Justification: The ST supplied includes where this #define resides shall not be changed.
	 */
	if ( ( m_flash_ctrl->CR1 & FLASH_CR_LOCK ) != 0U )
	{
		/* Unlock Bank 1 */
		m_flash_ctrl->KEYR1 = FLASH_KEY1;
		m_flash_ctrl->KEYR1 = FLASH_KEY2;
	}
	if ( ( m_flash_ctrl->CR2 & FLASH_CR_LOCK ) != 0U )
	{
		/* Unlock Bank 2 */
		m_flash_ctrl->KEYR2 = FLASH_KEY1;
		m_flash_ctrl->KEYR2 = FLASH_KEY2;
	}
}

void uC_Flash::Lock_Flash( void )
{
	/**
	 * @remark Coding Standard Deviation:
	 * @n MISRA-C++[2008] Rule: 2-13-3
	 * @n PCLint: Note 1960: Violates MISRA C++ 2008 Required Rule 2-13-3, Unsigned octal and hexadecimal literals
	 * require a 'U' suffix
	 * @n Justification: The ST supplied includes where this #define resides shall not be changed.
	 */
	/*lint -e{1960} */
	m_flash_ctrl->CR1 |= FLASH_CR_LOCK;
	m_flash_ctrl->CR2 |= FLASH_CR_LOCK;
}

uint32_t uC_Flash::Write_Time( uint8_t* data, NV_CTRL_ADDRESS_TD address,
							   NV_CTRL_LENGTH_TD length, bool include_erase_time ) const
{
	uint32_t write_time;
	uint32_t byte_write_time;
	uint32_t page_index;
	uint32_t test_address;
	uint32_t erased_values;			// To count the number of values that are actually erased and

	// don't need programming.

	write_time = 0U;
	page_index = 0U;
	if ( ( address >= BANK1_START_ADDR ) && ( ( address + length ) <= ( BANK2_END_ADDR + 1U ) ) )
	{
		test_address = INTERNAL_FLASH_START_ADDRESS +
			INTERNAL_FLASH_PAGE_SIZES[page_index].sector_size;
		if ( include_erase_time == true )
		{
			while ( INTERNAL_FLASH_PAGE_SIZES[page_index].sector_size != 0U )
			{
				if ( ( address <= test_address ) && ( ( address + length ) > ( test_address + 1U ) ) )
				{
					write_time += ( SECTOR_ERASE_TIME_BASELINE_MS *
									( INTERNAL_FLASH_PAGE_SIZES[page_index].sector_size /
									  INTERNAL_FLASH_PAGE_SIZES[0].sector_size ) );
				}
				page_index++;
				test_address += INTERNAL_FLASH_PAGE_SIZES[page_index].sector_size;
			}
		}
		// Check to see if we are calculating the erase time or a write time.
		if ( data != NULL )
		{
			erased_values = 0U;
			for ( uint32_t i = 0U; i < length; i++ )
			{
				if ( data[i] == FLASH_ERASED_VALUE )
				{
					erased_values++;
				}
			}

			byte_write_time = BYTE_WRITE_TIME_US * ( length - erased_values );
			if ( byte_write_time < MICROSECONDS_ADJUSTMENT )
			{
				byte_write_time = MICROSECONDS_ADJUSTMENT;
			}
			/*Because the byte write time is in microseconds we have to adjust it down.*/
			write_time += Round_Div( byte_write_time, MICROSECONDS_ADJUSTMENT );

		}
		else
		{
			// because we will erase the page we are on as well as the next page if we get
			write_time += ( SECTOR_ERASE_TIME_BASELINE_MS
							* ( Get_Page_Size( address ) /
								INTERNAL_FLASH_PAGE_SIZES[0].sector_size ) );
		}
	}
	return ( write_time );
}

uint32_t uC_Flash::Read_Time( uint8_t* data, NV_CTRL_ADDRESS_TD address,
							  NV_CTRL_LENGTH_TD length ) const
{
	// Todo: Implementation pending
	// uint32_t read_time = BYTE_READ_TIME_US * length;
	uint32_t read_time = 10 * length;

	if ( read_time < MICROSECONDS_ADJUSTMENT )
	{
		read_time = MICROSECONDS_ADJUSTMENT;
	}
	// Because the byte read time is in microseconds we have to adjust it down.
	read_time = Round_Div( read_time, MICROSECONDS_ADJUSTMENT );
	return ( read_time );
}

void uC_Flash::asynch_erase_handler( void )
{
	/* Acquired semaphore for complete erase operation */
	uC_FLASH_STATUS_EN status = Get_Status();

	if ( status == uC_FLASH_COMPLETE )
	{
		if ( m_asynch_erase_sector_head > m_asynch_erase_sector_end )
		{

			/* Release flash control after complete flash erase */
			m_semaphore = NV_Ctrl::RELEASE;
			m_state = COMPLETE;
			m_status = SUCCESS;
		}
		else
		{
			NV_CTRL_PRINT( DBG_MSG_INFO, "Flash erase handle: increment" );
			Erase_Page_Non_Blocking( m_asynch_erase_sector_head++ );
		}
	}
	else if ( status != uC_FLASH_BUSY )
	{
		NV_CTRL_PRINT( DBG_MSG_ERROR, "Flash erase handle: error" );
		m_state = ERROR;
		m_status = DATA_ERROR;
		m_semaphore = NV_Ctrl::RELEASE;
	}
	else
	{
		// NV_CTRL_PRINT( DBG_MSG_INFO, "Flash erase hadle: wait");
		// Busy state, We should wait.
		// Todo: We might need to add some cr_tasker_delay here if we want to reduce polling freq when flash is BUSY
	}
}

void uC_Flash::asynch_write_handler( void )
{
	NV_CTRL_LENGTH_TD length;

	if ( m_semaphore == NV_Ctrl::ACQUIRE )
	{
		/* Acquire semaphore only for WRITE_CHUCK_SIZE transfer */
		if ( m_asynch_data.length > WRITE_CHUCK_SIZE )
		{
			length = WRITE_CHUCK_SIZE;
		}
		else
		{
			length = m_asynch_data.length;
		}

		if ( true == Write_Now( m_asynch_data.data,  m_asynch_data.address, length ) )
		{
			m_asynch_data.data += length;
			m_asynch_data.address += length;
			m_asynch_data.length -= length;
			if ( m_asynch_data.length == 0 )
			{
				m_state = COMPLETE;
				m_status = SUCCESS;
				/* Release flash control after WRITE_CHUCK_SIZE transfer*/
				m_semaphore = NV_Ctrl::RELEASE;
			}
		}
		else
		{
			m_state = ERROR;
			m_status = DATA_ERROR;
			m_semaphore = NV_Ctrl::RELEASE;
			NV_CTRL_PRINT( DBG_MSG_ERROR, "Write Data Error" );
		}
	}
	else
	{
		// misra
	}
}

void uC_Flash::asynch_read_handler( void )
{
	NV_CTRL_LENGTH_TD length;

	if ( m_semaphore == NV_Ctrl::ACQUIRE )
	{
		/* Acquire semaphore only for READ_CHUCK_SIZE transfer */
		if ( m_asynch_data.length > READ_CHUCK_SIZE )
		{
			length = READ_CHUCK_SIZE;
		}
		else
		{
			length = m_asynch_data.length;
		}

		if ( true == Read_Now( m_asynch_data.data,  m_asynch_data.address, length ) )
		{
			m_asynch_data.data += length;
			m_asynch_data.address += length;
			m_asynch_data.length -= length;

			if ( m_asynch_data.length == 0 )
			{
				m_state = COMPLETE;
				m_status = SUCCESS;
				/* Release flash control after READ_CHUCK_SIZE transfer*/
				m_semaphore = NV_Ctrl::RELEASE;
			}
		}
		else
		{
			m_state = ERROR;
			m_status = DATA_ERROR;
			m_semaphore = NV_Ctrl::RELEASE;
			NV_CTRL_PRINT( DBG_MSG_ERROR, "Read Data Error" );
		}
	}
	else
	{
		// misra
	}
}
